# combat-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.sh
resources/static/: index.html  manifest.toml  register.html  scm.css
resources/templates/: added.html.hbs  gm_view.html.hbs  index.html.hbs  player.html.hns  player_view.html.hbs  register.html.hbs
resources/templates/error_pages/: 400.html.hbs  404.html.hbs  500.html.hbs
src/: game.rs  main.rs
src/dispatcher/: api.rs  dispatcher.rs  mod.rs
src/game/: character.rs  game.rs  initiative.rs
src/gamerunner/: authority.rs  dispatcher.rs  mod.rs  notifier.rs  registry.rs
src/http/: api.rs  errors.rs  messaging.rs  metagame.rs  mod.rs  models.rs  modelview.rs  renders.rs  responders.rs  serde.rs  server.rs  session.rs  state.rs  statics.rs
src/tracker/: character.rs  game.rs  gear.rs  initiative.rs  mod.rs
