[package]
name = "shadowrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "^0.4"
env_logger = "^0.9.0"
rand = "0.8.5"

[dependencies.tokio]
version = "1.18.2"
features = [
    "rt-multi-thread"
]

[dependencies.uuid]
version = "1.1.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serde-based serialization/deserialization
]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = [
    "json",
    "uuid"
]

[dependencies.rocket_dyn_templates]
features = ["handlebars"]

[dependencies.parking_lot]
version = "0.12.1"