[package]
name = "shadowrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "^0.4"
env_logger = "^0.9.0"
rand = "0.8.5"

[dependencies.tokio]
version = "1.29.1"
features = [
    "rt-multi-thread",
    "macros",
    "sync"
]

[dependencies.axum]
version = "0.6.18"

[dependencies.axum-macros]
version = "0.3.7"

[dependencies.axum-extra]
version = "0.7.5"
features = ["cookie"]

[dependencies.tower]
version = "0.4.13"

[dependencies.serde]
version = "1.0.167"
features = ["derive"]

[dependencies.uuid]
version = "1.1.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serde-based serialization/deserialization
]

[dependencies.toml]
version = "0.7.6"

[dependencies.parking_lot]
version = "0.12.1"

[dependencies.handlebars]
version = "4.3.7"